# guess-the-game-exchanger

./: Cargo.toml  README.md  test.bat
crates/app/: Cargo.toml
crates/app/src/: app.rs  app_message.rs  browser_message.rs  browser_state.rs  browser_type.rs  command_type.rs  component.rs  main.rs  message.rs
crates/app/src/browser/: browser_message.rs  firefox.rs  mod.rs
crates/core/: Cargo.toml
crates/core-tests/: Cargo.toml
crates/core-tests/src/browser/: chrome.rs  firefox.rs  mod.rs
crates/core/src/: lib.rs
crates/core/src/browser/: chrome.rs  entry.rs  firefox.rs  mod.rs  profile.rs
crates/core/src/profile/: mod.rs  profile.rs  profile_entry.rs
firefox/app/: Cargo.toml
firefox/core-tests/src/: lib.rs
firefox/core/src/: lib.rs
tools/: test.ps1
