[package]
name = "guess-the-game-exchanger"
version = "0.1.0"
authors = ["Perjéssy Lóránt <lostlont@lostlont.hu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"crates/app",
	"crates/core",
	"crates/core-tests",
]

[[bin]]
name = "guess-the-game-exchanger"
path = "crates/app/src/main.rs"
