[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.8.0"
rfd = "0.11.2"
serde_json = "1.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
core = { path = "../core" }
