[package]
name = "core"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "3.0.2"
dirs = "4.0.0"
rusty-leveldb = "1.0.6"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
